[project]
name = "chores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "discord>=2.3.2",
    "elevenlabs>=1.50.3",
    "openai>=1.58.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pytest>=8.0.0",
    "httpx>=0.26.0",  # Required for TestClient
]
